# DEMO

./: .claudeignore  .cursorignore  .cursorrules  .gitignore  .gitignore.mcp  .gitmodules  .lintstagedrc.js  .mcp-config.example.json  .mcp-config.json  .mcp.json  .npmrc  .prettierrc.json  .railway.json  .railwayignore  .secretlintrc.json  AI-Pages.md  AIDER_USAGE_GUIDE.md  AI_CONTACT_INTELLIGENCE_COMPLETE.md  AI_DEPLOYMENT_RULES.md  AI_INTEGRATION_PLAN.md  AI_MEDIATION_AUDIT.md  AI_OPTIMIZATION_COMPLETE.md  AI_OPTIMIZATION_SUMMARY.md  ANALYTICS_STATUS.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_REVIEW_ISSUES.md  ARCHITECTURE_REVIEW_useSendMessage.md  AUDIT_INDEX.md  A_PLUS_OPTIMIZATION_ROADMAP.md  BACKEND_CODE_REVIEW.md  BUTTON_COMPONENT_GUIDE.md  CHANGE_PROTOCOL.md  CHAT_UI_REVIEW.md  CLAIMS_VERIFICATION.md  CLAUDE.md  CODE_TO_FIGMA_SYNC.md  COMMANDS.md  COMMAND_ANALYSIS.md  COMPREHENSIVE_TESTING_COMPLETE.md  CONCEPTUAL_REVIEW.md  (+155 more)
.claude/: AGENT_TEST_RESULTS.md  COMMAND_CLEANUP_SUMMARY.md  README.md  REFACTORING_SUMMARY.md
.codebase-context-mcp/: README.md  codebase-context.json  index.js  package.json
.config/: ds-star.json
.cursor/: rules
.design-tokens-mcp/: README.md  index.js  tokens.json
.docs/: QUALITY_ENFORCEMENT_SUMMARY.md
.github/: pull_request_template.md
.husky/: pre-commit  pre-push
.mcp-docs/: QUICK_START.md  README.md  TAILWIND_MCP.md
.railway/: config.json
.specify/: pyproject.toml
.specify/config/: refinement.conf
.specify/memory/: agent-collaboration-triggers.md  agent-governance.md  constitution.md  constitution_update_checklist.md
.specify/scripts/bash/: validate-domain.sh
.specify/specs/004-account-pairing-refactor/: data-model.md
.specify/specs/004-account-pairing-refactor/contracts/: pairing-api.yaml  pairing-events.yaml
.specify/specs/004-ai-mediation-constitution/: spec.md
.specify/specs/005-language-analyzer/: spec.md
.specify/specs/005-tasks-feature-improvement/: plan.md
.specify/specs/005-user-account-invite-flow/: spec.md
.specify/specs/006-mediation-ux-improvement/: plan.md  spec.md
.specify/specs/006-mediator-speaker-perspective/: plan.md  spec.md
.specify/specs/008-profile-save-schema-fix/: spec.md
.specify/specs/010-user-profile-comprehensive/: architecture-diagram.md  implementation-checklist.md  spec.md  tasks.md
.specify/specs/012-data-persistence-fix/: spec.md
.specify/specs/user-auth-invite-system/: tasks.md
.specify/src/sdd/agents/architecture/: router.py
.specify/src/sdd/context/: retriever.py
.specify/src/sdd/refinement/: engine.py
.specify/templates/: agent-file-template.md  plan-template.md  prd-template.md  spec-template.md  tasks-template.md
.vercel/: project.json
chat-client/: .env.example  ChatRoom.jsx  PWA_SETUP.md  config.js  index.html  index.legacy.html  join.html  package.json  privacy.html  service-worker.js  terms.html  vercel.json
chat-client-vite/: .env  .env.example  .env.production  README.md  VERCEL_BUILD_FIX.md  VERCEL_PROJECT_LOCK.md  XSTATE_IMPLEMENTATION.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json  vite.config.js  vitest.config.js
chat-server/: .env.example  .gitignore  .railway-rebuild  .railway.json  CONTACT_SUGGESTION_BUG.md  DATABASE_PERSISTENCE_ISSUE.md  DEV_VS_PROD.md  DIRECT_IMPORTS_REFACTORING.md  FIX_OAUTH_ERROR.md  NEO4J_PASSWORD_FIX.md  PLAN_pending_original_fixes.md  PRODUCTION_FIX_VIRA.md  PRODUCTION_ISSUE_MISSING_CHILD_CONTACT.md  RAILWAY_DB_PATH_FIX.md  RAILWAY_VOLUME_SETUP.md  README.md  README_AI_MEDIATOR.md  STALE_CONNECTIONS_FIX.md  TESTABILITY_IMPROVEMENTS.md  TESTING.md  TEST_FAILURE_FORENSIC.md  admin.html  auth.js  (+71 more)
(+2900 files in other folders)
