[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "liaizen-sdd"
version = "1.0.0"
description = "SDD Agentic Framework for LiaiZen Co-Parenting Platform"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]
