[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "liaizen-sdd"
version = "1.0.0"
description = "SDD Agentic Framework for LiaiZen Co-Parenting Platform"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["sdd"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pyright]
# Type checking configuration
# Enforces Contract-First principle (Principle III) by requiring type hints

include = ["src/sdd"]
exclude = [
    "**/__pycache__",
    "**/.*",
    "**/node_modules",
    "**/.venv",
    "**/venv",
    "**/build",
    "**/dist",
]

# Python version
pythonVersion = "3.11"

# Type checking mode (strict = most checks enabled)
typeCheckingMode = "basic"  # "basic" | "standard" | "strict"

# Report settings
reportMissingImports = "warning"
reportMissingTypeStubs = "none"  # Allow untyped dependencies
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportWildcardImportFromLibrary = "warning"
reportOptionalSubscript = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalCall = "warning"
reportOptionalIterable = "warning"
reportOptionalContextManager = "warning"
reportOptionalOperand = "warning"
reportGeneralTypeIssues = "warning"
reportPrivateImportUsage = "warning"
reportConstantRedefinition = "warning"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportOverlappingOverloads = "error"

# Pydantic support (if using pydantic plugin)
# Note: Pydantic v2 works well with pyright out of the box

[tool.pytest.ini_options]
# Pytest configuration for test discovery
# Tests are in __tests__ directories and named test_*.py
testpaths = [
    "src",
    "tests",
]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Discover tests in __tests__ directories
norecursedirs = [".git", ".venv", "venv", "__pycache__", "*.egg-info", "build", "dist"]
# Coverage configuration
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",  # Show extra test summary info
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
